--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,7 +17,7 @@
     {% endfor %}
 </body>
 
-</html>
+</html> -->
 
 <!-- 
     1. The advantage to using class-based generic views is that they are very terse, 
