--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!--Custom CSS-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
@@ -39,7 +40,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                            href="#">Home</a>
+                            href="{% url 'home' %}">Home</a>
                     </li>
 
                 </ul>
@@ -76,6 +77,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
+
+        
 </body>
 
 </html>
+
+<!--1. There are 2 types of notation:
+The double brace notation {{ }} indicates a variable. When the template engine encounters a variable, it evaluates that variable and replaces it with the result. 
+For example, {{ post.author }} will be replaced by the value of the author attribute 
+from the post object
+  2. The brace and percentage sign notation, {% %}, is what we call a tag. 
+  Tags are more complex than variables. Some of them, like the block tag, allow for text or HTML to be inserted. Others, like the for loop, 
+  control flow by performing loops or logical operations.
+ 3.A for loop needs something to iterate over. In this case, the post_list object. 
+ This object is passed into the template by the generic ListView,
+  and contains the contents of the queryset that we defined earlier.
+ 4.This if statement checks to see how many times our for loop has run. If the counter is divisible by three, then it inserts another closing div tag and a new div with the class of row.
+  This is so that we have a maximum of three posts per row on the homepage. If you change that number to 2 and refresh your project, you will see that you have three rows of two posts instead of two rows of three. 
+ This is a handy trick to remember when formatting your own list pages. Make sure you put the number back to 3 and 
+ save your index.html file before moving on.-->
