--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 {% url 'home' as home_url %}
+{% url 'about' as about_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -43,6 +44,12 @@
                             href="{% url 'home' %}">Home</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link
+                          {% if request.path == about_url %}active{%endif%}" aria-current="page"
+                            href="{% url 'about' %}">About</a>
+                    </li>
+
                 </ul>
                 <span class="navbar-text text-muted">
                     adventures of a software developer
@@ -65,7 +72,7 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Made by Code Instituters</p>
         {% block copyright %}
-         Made by Code Instituters
+        Made by Code Instituters
         {% endblock copyright %}
         <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
@@ -78,8 +85,7 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
 
-     <script src="{% static 'js/script.js' %}"></script>   
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
-
